<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:scrollbars="vertical">
    <LinearLayout 
        android:id="@+id/about_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    

    <TextView
        android:id="@+id/texttitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title1"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView 
        android:id="@+id/aboutcontent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/texttitle1"
        android:text="@string/about_content1"
        android:textSize="15sp"/>
       <TextView 
        android:id="@+id/aboutcontent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/aboutcontent1"
        android:text="@string/about_content2"
        android:textSize="15sp"/>
       <View 
           android:layout_height="1dp" 
            android:layout_marginTop="8dp"
           android:layout_width="fill_parent"
           android:layout_below="@id/aboutcontent2"
           android:background="#000000"></View>
    
</RelativeLayout>
   <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    <TextView
        android:id="@+id/texttitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title2"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView 
        android:id="@+id/aboutcontent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/texttitle2"
        android:text="@string/about_content3"
        android:textSize="15sp"/>
       <TextView 
        android:id="@+id/aboutcontent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/aboutcontent3"
        android:text="@string/about_content4"
        android:textSize="15sp"
        android:autoLink="email|phone|web"/>
        <TextView 
        android:id="@+id/aboutcontent5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/aboutcontent4"
        android:text="@string/about_content5"
        android:textSize="15sp"/>
        <TextView 
        android:id="@+id/aboutcontent6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/aboutcontent5"
        android:text="@string/about_content6"
        android:textSize="15sp"
        android:autoLink="email|phone|web"/>
        <TextView 
        android:id="@+id/aboutcontent7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/aboutcontent6"
        android:text="@string/about_content7"
        android:textSize="15sp"/>
        <TextView 
        android:id="@+id/aboutcontent8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/aboutcontent7"
        android:text="@string/about_content8"
        android:textSize="15sp"/>
        <Button 
        android:id="@+id/aboutcontent9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/aboutcontent8"
        android:layout_centerHorizontal="true"
        android:text="@string/about_content9"
        android:textSize="15sp"/>
</RelativeLayout>
</LinearLayout>
</ScrollView>
