<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ketop"
        android:layout_width="120dp"
        android:layout_height="120dp"
        
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/ketop" />

    <RelativeLayout
        android:id="@+id/Relativelayout02"
        android:layout_width="304dp"
        android:layout_height="90dp"
        android:layout_below="@+id/ketop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" >

        <TextView
            android:id="@+id/LoginIDx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/user_name"
            android:textSize="20sp" />

        <EditText
            
            android:id="@+id/LoginID"
            android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:digits="1234567890."
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/LoginIDx"
            android:layout_toRightOf="@id/LoginIDx"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/PassWordx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/LoginIDx"
            android:layout_marginLeft="32dp"
         	android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PassWord"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/PassWordx"        
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/PassWordx"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/remindtext"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/remind" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Relativelayout02"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:alpha="50"
        android:text="@string/login_btn" />

</RelativeLayout>